# CLI_todoListManager

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: helper.cpp  main.cpp  manager.cpp  persistence.cpp
src/include/: helper.h  main.h  manager.h  persistence.h
tests/: test_example.cpp
